// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCardActions Should not render edit/delete/share/restart buttons if current user is not the owner 1`] = `
<div>
  <div
    class="StackCardActions-cardActions-13 cardActions"
  >
    <div
      class="StackCardActions-buttonWrapper-14 buttonWrapper"
    >
      <div
        aria-label="Cannot be opened until resource is ready"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-fullWidth MuiButtonBase-root  css-1xb5c10-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Open
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCardActions creates correct snapshot 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="StackCardActions-cardActions-1 cardActions"
  >
    <div
      class="StackCardActions-buttonWrapper-2 buttonWrapper"
    >
      <div
        aria-label="Cannot be opened until resource is ready"
        class=""
        data-mui-internal-clone-element="true"
      >
        <button
          class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-fullWidth MuiButtonBase-root  css-1xb5c10-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Open
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="StackCardActions-buttonWrapper-2 buttonWrapper"
    >
      <button
        aria-controls="more-menu"
        aria-haspopup="true"
        class="MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-fullWidth MuiButtonBase-root  css-1gfot13-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        <span
          aria-hidden="true"
          class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-kp9ftd-MuiIcon-root"
        >
          more_vert
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`StackCardActions creates correct snapshot 2`] = `
<ul
  class="MuiList-root MuiList-padding MuiMenu-list css-6hp17o-MuiList-root-MuiMenu-list"
  role="menu"
  tabindex="-1"
>
  <div
    requiredpermission="edit"
    userpermissions="open,delete,edit"
  >
    Edit
    disabled: undefined
  </div>
  <div
    requiredpermission="delete"
    userpermissions="open,delete,edit"
  >
    Set Access: Project
    disabled: false
  </div>
  <div
    requiredpermission="edit"
    userpermissions="open,delete,edit"
  >
    Restart
    disabled: false
  </div>
  <div
    requiredpermission="delete"
    userpermissions="open,delete,edit"
  >
    Delete
    disabled: undefined
  </div>
</ul>
`;

exports[`StackCardActions creates correct snapshot if there are multiple copy snippets 1`] = `
<ul
  class="MuiList-root MuiList-padding MuiMenu-list css-6hp17o-MuiList-root-MuiMenu-list"
  role="menu"
  tabindex="-1"
>
  <div
    requiredpermission="edit"
    userpermissions="open,delete,edit"
  >
    Edit
    disabled: undefined
  </div>
  <div
    requiredpermission="delete"
    userpermissions="open,delete,edit"
  >
    Set Access: Project
    disabled: false
  </div>
  <div
    requiredpermission="edit"
    userpermissions="open,delete,edit"
  >
    Restart
    disabled: false
  </div>
  <div
    requiredpermission="open"
    userpermissions="open,delete,edit"
  >
    Copy Python snippet
    disabled: undefined
  </div>
  <div
    requiredpermission="open"
    userpermissions="open,delete,edit"
  >
    Copy R snippet
    disabled: undefined
  </div>
  <div
    requiredpermission="delete"
    userpermissions="open,delete,edit"
  >
    Delete
    disabled: undefined
  </div>
</ul>
`;
